fix: Set margin and font-size for better visibility

--- a/budapest-go-2-frontend/src/components/elements/dropMenu/dropMenu.css
+++ b/budapest-go-2-frontend/src/components/elements/dropMenu/dropMenu.css
@@ -2,7 +2,7 @@
   display: flex;
   align-content: center;
   justify-content: center;
-  margin: 100px 100px;
+  margin: 80px 80px;
 }
 
 .menuButton {
@@ -26,6 +26,7 @@
 
 .title {
   margin-right: -100px;
+  font-size: 16px;
 }
 
 .tag {
